# asche

./: .gitignore  Cargo.toml  README.md  build.rs
examples/compute/: main.rs
examples/compute/shader/: compute.comp.spv
examples/cube/: fractal.dds  main.rs
examples/cube/shader/: cube.frag.spv  cube.vert  cube.vert.spv
examples/cube/shaders/: cube.frag  cube.vert
examples/raytracing/: build_shader.sh  gltf.rs  main.rs  model.glb  uploader.rs
examples/raytracing/shader/: common.glsl  postprocess.frag  postprocess.frag.spv  postprocess.vert  postprocess.vert.spv  raytrace.rchit  raytrace.rchit.spv  raytrace.rgen  raytrace.rgen.spv  raytrace.rmiss  raytrace.rmiss.spv
examples/simple/: main.rs
examples/simple/shaders/: simple.frag  simple.vert
examples/triangle/: main.rs
examples/triangle/shader/: triangle.frag.spv  triangle.vert.spv
examples/triangle/shaders/: triangle.frag  triangle.vert
shader/: compute.comp  cube.frag  cube.vert
src/: acceleration_structure.rs  buffer.rs  command.rs  context.rs  debug.rs  deferred_operation.rs  descriptor.rs  device.rs  error.rs  fence.rs  image.rs  instance.rs  lib.rs  memory_allocator.rs  query.rs  queue.rs  semaphore.rs  swapchain.rs  vk_debug.rs
src/allocator/: best_fit_allocator.rs  dedicated_allocator.rs  dedicated_block_allocator.rs  error.rs  free_list_allocator.rs  mod.rs
tests/: fixture.rs  lib.rs
