[package]
name = "asche"
version = "2.0.0"
authors = ["Nils Hasenbanck <nils@hasenbanck.de>"]
description = "Provides an abstraction layer above erupt to easier use Vulkan in Rust."
license = "Zlib OR MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hasenbanck/asche"
categories = ["rendering::graphics-api", "rendering"]
keywords = ["vulkan", "erupt"]
edition = "2018"

[features]
default = ["tracing", "vk-buffer-device-address"]
tracing = ["tracing1", "vk-alloc/tracing"]
vk-buffer-device-address = ["vk-alloc/vk-buffer-device-address"]
profile-with-puffin = ["profiling/profile-with-puffin", "vk-alloc/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick", "vk-alloc/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal", "vk-alloc/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing", "vk-alloc/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy", "vk-alloc/profile-with-tracy"]

[dependencies]
erupt = { version = "0.19", features = ["bytemuck"] }
profiling = { version = "1.0", optional = true }
raw-window-handle = "0.3"
tracing1 = { version = "0.1", package = "tracing", default-features = false, optional = true }
vk-alloc = "2.0"

[dev-dependencies]
bytemuck = "1.7"
ddsfile = "0.4"
gltf = "0.16"
glam = "0.17"
tracing-subscriber = { version = "0.2", default-features = false, features = ["fmt", "ansi", "env-filter"] }
winit = "0.25"
